# libzippp

./: .hgignore  .hgsigs  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  LICENSE.md  README  README.md  ZipArchive.cpp  ZipArchive.h  bitbucket-pipelines.yml  zip.hpp  zippy.cpp  zippy.h  zippy.hpp
cmake/: FindZIP.cmake
doc/: Doxyfile.in  mainpage.cpp
gtest/: CMakeLists.txt
test/: main.cpp
